<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/myFavorites"
    android:icon="@drawable/my_favorites"
    android:orderInCategory="100"
    android:title="@string/favorites"
    app:showAsAction="ifRoom"/>
</menu>
