<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/favorite_item"
    android:icon="@drawable/add_favorite_border_color"
    android:orderInCategory="100"
    android:title="@string/favorites"
    app:showAsAction="ifRoom"/>
</menu>