<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white"
  android:orientation="vertical"
  app:layout_behavior="@string/appbar_scrolling_view_behavior">

  <com.facebook.shimmer.ShimmerFrameLayout
    android:id="@+id/shimmer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:shimmer_auto_start="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <include layout="@layout/viewpager_item_placeholder" />

      <include layout="@layout/viewpager_item_placeholder" />

      <include layout="@layout/viewpager_item_placeholder" />
    </LinearLayout>
  </com.facebook.shimmer.ShimmerFrameLayout>

  <android.support.v7.widget.RecyclerView
    android:id="@+id/rvRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</LinearLayout>